After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780052 - week-view: alignment issues for events when too many full-day events are present.
week-view: alignment issues for events when too many full-day events are pres...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Views
unspecified
Other Linux
: Normal major
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-14 19:20 UTC by Mohammed Sadiq
Modified: 2017-03-14 23:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
week-view: too many events (video) (240.47 KB, video/webm)
2017-03-14 19:20 UTC, Mohammed Sadiq
  Details
week-grid: disconsider reported min-width for events (1.82 KB, patch)
2017-03-14 23:54 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Mohammed Sadiq 2017-03-14 19:20:35 UTC
Created attachment 347940 [details]
week-view: too many events (video)

When there are too many full-day events to be rendered in week-view, the alignment may go wrong.

Please see the attached screencast.

Thanks.
Comment 1 Georges Basile Stavracas Neto 2017-03-14 23:54:52 UTC
Created attachment 347968 [details] [review]
week-grid: disconsider reported min-width for events

Sometimes, we'll need to ignore the reported minimum sizes
to be able to set the width of events to an acceptable
size. This is the case of the week grid.
Comment 2 Georges Basile Stavracas Neto 2017-03-14 23:55:28 UTC
Thanks for the report.

Attachment 347968 [details] pushed as 39d871d - week-grid: disconsider reported min-width for events